# fiber-scripts

./: Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/commitment-lock/: Cargo.toml  README.md
contracts/commitment-lock/src/: main.rs
contracts/funding-lock/: Cargo.toml  Makefile  README.md
contracts/funding-lock/src/: main.rs
contracts/htlc-lock/: Cargo.toml  README.md
contracts/htlc-lock/src/: main.rs
deployment/testnet/: testnet.json  testnet.sh  testnet.toml
deployment/testnet/migrations/: 2024-05-13-044915.json  2024-06-14-014027.json  2024-06-28-065916.json  2024-09-14-084742.json
tests/: Cargo.toml
tests/src/: tests.rs
